@@ -1,5 +1,11 @@
 2004-03-30  Mark McLoughlin  <mark@skynet.ie>
 
+	* tests/testbackend.c: (foreach_recursive), (sync_and_clear),
+	(check_unset), (set_value), (get_value): upd. for the fact
+	we have a copy of the vtale now rather than a pointer to it.
+
+2004-03-30  Mark McLoughlin  <mark@skynet.ie>
+
 	* gconf/gconf-backend.h: actually add the vtable_size
 	vtable member.
 
